--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -43,7 +43,7 @@ font-2 = FontAwesome:pixelsize=16;2
 font-3 = xos4 Terminess Powerline:size=28;4
 
 bottom = false
-dock = false
+override-redirect = false
 width = 100%
 height = 26
 offset-x = 0
@@ -52,7 +52,7 @@ offset-y = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-border-bottom = 1
+border-bottom-size = 1
 border-bottom-color = ${colors.dark}
 
 spacing = 0
@@ -82,7 +82,6 @@ enable-scroll = true
 wrapping-scroll = false
 
 strip-wsnumbers = true
-wsname-maxlen = 1
 
 label-focused = %icon%
 label-focused-foreground = ${colors.blue}
